--- a/index.html
+++ b/index.html
@@ -28,13 +28,30 @@
                     <h3>Skill 1</h3>
                     <img class="img-skill1" src="img/music.png" alt="skill1">
                     <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, possimus</p>
-                <h3>Skill 2 </h3>
-            <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, possimus</p>
-
             </div>
 
-        </div>
+                <div class="skills">
+                    <h3>Skill 2 </h3>
+                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, possimus</p>
+
+                 </div>
+
+            </div>
+        <div class="contact-me">
+            <h2>Get In Touch</h2>
+            <h3>Lorem ipsum dolor sit amet</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea eum mollitia laudantium amet, tempore maiores explicabo molestias quidem nulla modi atque necessitatibus. Culpa quidem optio quis beatae voluptatem ut fugit.</p>
+            <a href="#" class="btn">Contact me</a>
     </div>
+    <div class="bottom-container">
+
+        <a href="" class="footer">LinkedIn</a>
+        <a href="" class="footer">Twitter</a>
+        <a href="" class="footer">Website</a>
+        <p> © 2019 Aleksei Staiger</p>
+
+
+
 </div>
 
 </body>
